--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
     "joi": "^17.13.3",
     "lucide": "^0.488.0",
     "lucide-react": "^0.488.0",
+    "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
