--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.18.1",
+    "fs": "^0.0.1-security",
     "gsap": "^3.13.0",
     "joi": "^17.13.3",
     "lucide": "^0.488.0",
